--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QHCN</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
+    <meta key="title" content="QHCN" property="og:title" />
     <meta
       content="Asiste a eventos que solo los niños pueden imaginar."
       property="og:description"
