--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QHCN</title>
+    <title>QHCLN</title>
     <meta key="title" content="QHCN" property="og:title" />
     <meta
       content="Asiste a eventos que solo los niños pueden imaginar."
